# reaper

./: .gitignore  App.cpp  App.h  AppOpenCL.cpp  AppOpenCL.h  Blake512.cpp  Blake512.h  CMakeConf.h.in  CMakeLists.txt  CPUMiner.cpp  CPUMiner.h  Config.cpp  Config.h  Curl.cpp  Curl.h  Global.h  Global.h.in  Make.sh  Make_nogpu.sh  README.md  RSHash.cpp  RSHash.h  SHA256.cpp  SHA256.h  ServerSettings.cpp  ServerSettings.h  Util.cpp  Util.h  cl.h  cmake-linux.sh  cmake-mac.sh  cmake-win.cmd  license.txt  main.cpp  reaper.cl  reaper.conf  reaper.vcxproj  reaper.vcxproj.filters  reaper_hd4xxx.cl  reaper_nvidia.cl
windows/lib/x86/: curl.exp  curl.lib  libcurl.exp  pthread.exp  pthread.lib
windows/lib/x86_64/: curl.exp  curl.lib  libcurl.exp  pthread.exp  pthread.lib
